--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -1,3 +1,23 @@
+.cursor-pointer {
+    cursor: pointer;
+}
+
+li {
+    cursor: pointer;
+}
+
+.center-table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
+}
+
+th {
+    text-align: center;
+}
+
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -18,7 +38,9 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 45%; /* Could be more or less, depending on screen size */
+    margin-top: 100px;
+    margin-bottom: 0;
 }
 
 /* The Close Button */
@@ -143,7 +165,7 @@ label {
     border: 2px solid #ddd;
     box-shadow: none;
     font-size: 100%;
-    width: 100%;
+    /*width: 100%;*/
     margin-bottom: 1em;
 }
 
@@ -354,7 +376,7 @@ label, p, h1{
 
 .little-white {
     background-color: white;
-    width: 20%;
+    width: 35%;
 }
 
 .centra {
@@ -1461,7 +1483,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 
 /* Aligned Forms */
 .pure-form-aligned .pure-control-group {
-    margin-bottom: 0.5em;
+    /*margin-bottom: 0.5em;*/
 }
 .pure-form-aligned .pure-control-group label {
     text-align: right;
